force-app/main/default/objects/Opportunity__c/fields/All_in_Value__c.field-meta.xml
<CustomField>
    <fullName>All_in_Value__c</fullName>
    <label>All in Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>