force-app/main/default/objects/Opportunity__c/fields/Alternate_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email_Id__c</fullName>
    <formula>Account__r.Alternate_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alternate Email Id</label>
    <type>Text</type>
</CustomField>