force-app/main/default/objects/Opportunity__c/fields/Alternate_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Mobile__c</fullName>
    <formula>Account__r.PersonContact.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alternate Mobile</label>
    <type>Text</type>
</CustomField>