force-app/main/default/objects/Opportunity__c/fields/Any_Pre_existing_Loans__c.field-meta.xml
<CustomField>
    <fullName>Any_Pre_existing_Loans__c</fullName>
    <label>Any Pre-existing Loans?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>