force-app/main/default/objects/Opportunity__c/fields/Area_Sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Area_Sq_ft__c</fullName>
    <label>Area (Sq. ft.)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Area_Sq_ft</valueSetName>
    </valueSet>
</CustomField>