force-app/main/default/objects/Opportunity__c/fields/Assignment_Validity_Date__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Validity_Date__c</fullName>
    <label>Assignment Validity Date</label>
    <type>Date</type>
</CustomField>