force-app/main/default/objects/Opportunity__c/fields/Brochure_Link__c.field-meta.xml
<CustomField>
    <fullName>Brochure_Link__c</fullName>
    <formula>Project__r.Public_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brochure Link</label>
    <type>Text</type>
</CustomField>