force-app/main/default/objects/Opportunity__c/fields/Brokerage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Brokerage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>