force-app/main/default/objects/Opportunity__c/fields/Campaign_Custom__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Custom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Custom</label>
    <referenceTo>Campaign__c</referenceTo>
    <relationshipLabel>Opportunity</relationshipLabel>
    <relationshipName>Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>