force-app/main/default/objects/Opportunity__c/fields/Cancellation_Approver__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cancellation Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>