force-app/main/default/objects/Opportunity__c/fields/Cancellation_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Remarks__c</fullName>
    <label>Cancellation Remarks</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>