force-app/main/default/objects/Opportunity__c/fields/Closing_Manager__c.field-meta.xml
<CustomField>
    <fullName>Closing_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closing Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Opportunities (Closing Manager)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>