force-app/main/default/objects/Opportunity__c/fields/Closing_Manager_Incentives__c.field-meta.xml
<CustomField>
    <fullName>Closing_Manager_Incentives__c</fullName>
    <label>Closing Manager Incentives</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>