force-app/main/default/objects/Opportunity__c/fields/CP_1_Contribution__c.field-meta.xml
<CustomField>
    <fullName>CP_1_Contribution__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CP 1 Contribution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>