force-app/main/default/objects/Opportunity__c/fields/CP_Lead__c.field-meta.xml
<CustomField>
    <fullName>CP_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP Lead</label>
    <referenceTo>CP_Lead__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>