force-app/main/default/objects/Opportunity__c/fields/Current_Outstanding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Outstanding_Amount__c</fullName>
    <label>Current Outstanding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>