force-app/main/default/objects/Opportunity__c/fields/Departments__c.field-meta.xml
<CustomField>
    <fullName>Departments__c</fullName>
    <label>Departments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>