force-app/main/default/objects/Opportunity__c/fields/Eligible_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Loan_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Eligible Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>