force-app/main/default/objects/Opportunity__c/fields/Email2__c.field-meta.xml
<CustomField>
    <fullName>Email2__c</fullName>
    <label>EmailA</label>
    <type>Email</type>
</CustomField>