force-app/main/default/objects/Opportunity__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>Account__r.PersonContact.Email</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>