force-app/main/default/objects/Opportunity__c/fields/Finances_match_with_Project_budget__c.field-meta.xml
<CustomField>
    <fullName>Finances_match_with_Project_budget__c</fullName>
    <label>Finances match with Project budget</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>