force-app/main/default/objects/Opportunity__c/fields/First_Site_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Site_Visit_Date__c</fullName>
    <label>First Site Visit Date</label>
    <type>DateTime</type>
</CustomField>