force-app/main/default/objects/Opportunity__c/fields/Fist_SV_Date__c.field-meta.xml
<CustomField>
    <fullName>Fist_SV_Date__c</fullName>
    <label>Fist SV Date</label>
    <type>DateTime</type>
</CustomField>