force-app/main/default/objects/Opportunity__c/fields/Hot_Expected_Closure_Count__c.field-meta.xml
<CustomField>
    <fullName>Hot_Expected_Closure_Count__c</fullName>
    <formula>IF( ISPICKVAL( Sub_Stage__c , &apos;Hot&apos;) , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hot Expected Closure Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>