force-app/main/default/objects/Opportunity__c/fields/Is_Booked__c.field-meta.xml
<CustomField>
    <fullName>Is_Booked__c</fullName>
    <formula>IF(ISPICKVAL(Stage__c , &apos;Booked&apos;), true, false)</formula>
    <label>Is Booked</label>
    <type>Checkbox</type>
</CustomField>