force-app/main/default/objects/Opportunity__c/fields/Is_CP_Conflict__c.field-meta.xml
<CustomField>
    <fullName>Is_CP_Conflict__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is CP Conflict ?</label>
    <type>Checkbox</type>
</CustomField>