force-app/main/default/objects/Opportunity__c/fields/Is_Customer_With_Family__c.field-meta.xml
<CustomField>
    <fullName>Is_Customer_With_Family__c</fullName>
    <label>Is Customer With Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>