force-app/main/default/objects/Opportunity__c/fields/Is_Opp_Share__c.field-meta.xml
<CustomField>
    <fullName>Is_Opp_Share__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Opp Share</label>
    <type>Checkbox</type>
</CustomField>