force-app/main/default/objects/Opportunity__c/fields/Is_SourceChanged__c.field-meta.xml
<CustomField>
    <fullName>Is_SourceChanged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_SourceChanged</label>
    <type>Checkbox</type>
</CustomField>