force-app/main/default/objects/Opportunity__c/fields/Last_Presale_Call_Comment__c.field-meta.xml
<CustomField>
    <fullName>Last_Presale_Call_Comment__c</fullName>
    <label>Last Presale Call Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>