force-app/main/default/objects/Opportunity__c/fields/Last_Sales_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Sales_Call_Status__c</fullName>
    <label>Last Sales Call Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>