force-app/main/default/objects/Opportunity__c/fields/Last_Site_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Site_Visit_Date__c</fullName>
    <formula>TEXT( Last_SV_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Site Visit Date</label>
    <type>Text</type>
</CustomField>