force-app/main/default/objects/Opportunity__c/fields/Last_Source_Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Source_Changed_By__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Last Source Changed By</label>
    <type>Date</type>
</CustomField>