force-app/main/default/objects/Opportunity__c/fields/Last_Source_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Source_Changed_Date__c</fullName>
    <label>Last Source Changed Date</label>
    <type>Date</type>
</CustomField>