force-app/main/default/objects/Opportunity__c/fields/Last_SV_attended_by__c.field-meta.xml
<CustomField>
    <fullName>Last_SV_Attended_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last SV Attended By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>