force-app/main/default/objects/Opportunity__c/fields/Last_SV_Comment__c.field-meta.xml
<CustomField>
    <fullName>Last_SV_Comment__c</fullName>
    <label>Last SV Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>