force-app/main/default/objects/Opportunity__c/fields/Last_SV_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_SV_Date__c</fullName>
    <label>Last SV Date</label>
    <type>DateTime</type>
</CustomField>