force-app/main/default/objects/Opportunity__c/fields/Latest_Enquiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Enquiry_Date__c</fullName>
    <label>Latest Enquiry Date</label>
    <type>DateTime</type>
</CustomField>