force-app/main/default/objects/Opportunity__c/fields/Locations__c.field-meta.xml
<CustomField>
    <fullName>Locations__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Thane</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>