force-app/main/default/objects/Opportunity__c/fields/M_Stage__c.field-meta.xml
<CustomField>
    <fullName>M_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>M_Stage</label>
    <type>Checkbox</type>
</CustomField>