force-app/main/default/objects/Opportunity__c/fields/M_Stages__c.field-meta.xml
<CustomField>
    <fullName>M_Stages__c</fullName>
    <formula>IF(AND(Site_Visit_Count__c &gt;= 2, ISPICKVAL(Is_Customer_With_Family__c, &quot;Yes&quot;)), &quot;Hot&quot;, &quot;&quot;)</formula>
    <label>M_Stage</label>
    <type>Text</type>
</CustomField>