force-app/main/default/objects/Opportunity__c/fields/Management_Name__c.field-meta.xml
<CustomField>
    <fullName>Management_Name__c</fullName>
    <label>Management Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>