force-app/main/default/objects/Opportunity__c/fields/MHOT__c.field-meta.xml
<CustomField>
    <fullName>MHOT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MHOT</label>
    <type>Checkbox</type>
</CustomField>