force-app/main/default/objects/Opportunity__c/fields/Mobile2__c.field-meta.xml
<CustomField>
    <fullName>Mobile2__c</fullName>
    <label>MobileA</label>
    <type>Phone</type>
</CustomField>