force-app/main/default/objects/Opportunity__c/fields/OCR__c.field-meta.xml
<CustomField>
    <fullName>OCR__c</fullName>
    <defaultValue>0</defaultValue>
    <label>OCR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>