force-app/main/default/objects/Opportunity__c/fields/Opportunity_Aging__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Aging__c</fullName>
    <formula>ABS(DATETIMEVALUE( TODAY() ) - DATETIMEVALUE( First_Site_Visit_Date__c ))</formula>
    <label>Opportunity Aging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>