force-app/main/default/objects/Opportunity__c/fields/Opportunity_Notification_after_every_3hr__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Notification_after_every_3hr__c</fullName>
    <label>Opportunity Notification after every 3hr</label>
    <type>DateTime</type>
</CustomField>