force-app/main/default/objects/Opportunity__c/fields/Opportunity_Sub_stage_Reason__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Sub_stage_Reason__c</fullName>
    <label>Opportunity Sub-stage Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Opportunity_Sub_stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Opportunity_Sub_stage_Reason</valueSetName>
    </valueSet>
</CustomField>