force-app/main/default/objects/Opportunity__c/fields/Opportunity_Validity_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Validity_Date__c</fullName>
    <description>Used to calculate the valid date until the opportunity remains active.</description>
    <inlineHelpText>Used to calculate the valid date until the opportunity remains active.</inlineHelpText>
    <label>Opportunity Validity Date</label>
    <type>Date</type>
</CustomField>