force-app/main/default/objects/Opportunity__c/fields/Other_Comments__c.field-meta.xml
<CustomField>
    <fullName>Other_Comments__c</fullName>
    <label>Other Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>