force-app/main/default/objects/Opportunity__c/fields/Other_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Lost_Reason__c</fullName>
    <label>Other Lost Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>