force-app/main/default/objects/Opportunity__c/fields/Other_Referrer_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Referrer_Name__c</fullName>
    <label>Other Referrer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>