force-app/main/default/objects/Opportunity__c/fields/Other_Source_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Source_Details__c</fullName>
    <label>Other Source Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>