force-app/main/default/objects/Opportunity__c/fields/Per_Square_Ft_Rate__c.field-meta.xml
<CustomField>
    <fullName>Per_Square_Ft_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Per Square Ft. Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>