force-app/main/default/objects/Opportunity__c/fields/Possession_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Possession_Timeframe__c</fullName>
    <label>Possession Timeframe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Possession_Timeframe</valueSetName>
    </valueSet>
</CustomField>