force-app/main/default/objects/Opportunity__c/fields/Preapproved_Loan__c.field-meta.xml
<CustomField>
    <fullName>Preapproved_Loan__c</fullName>
    <label>Preapproved Loan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>