force-app/main/default/objects/Opportunity__c/fields/Presales_Call_Comment__c.field-meta.xml
<CustomField>
    <fullName>Presales_Call_Comment__c</fullName>
    <label>Presales Call Comment</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>