force-app/main/default/objects/Opportunity__c/fields/Presales_Call_Count__c.field-meta.xml
<CustomField>
    <fullName>Presales_Call_Count__c</fullName>
    <label>Presales Call Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>