force-app/main/default/objects/Opportunity__c/fields/Presales_Date_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Presales_Date_of_Visit__c</fullName>
    <label>Presales Date of Visit</label>
    <type>DateTime</type>
</CustomField>