force-app/main/default/objects/Opportunity__c/fields/Presales_Last_Call_Comment__c.field-meta.xml
<CustomField>
    <fullName>Presales_Last_Call_Comment__c</fullName>
    <label>Presales Last Call Comment</label>
    <type>TextArea</type>
</CustomField>