force-app/main/default/objects/Opportunity__c/fields/Presales_Last_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Presales_Last_Call_Date__c</fullName>
    <label>Presales Last Call Date</label>
    <type>DateTime</type>
</CustomField>