force-app/main/default/objects/Opportunity__c/fields/Presales_Proposed_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Presales_Proposed_Visit_Date__c</fullName>
    <label>Presales Proposed Visit Date</label>
    <type>DateTime</type>
</CustomField>