force-app/main/default/objects/Opportunity__c/fields/Project_Location__c.field-meta.xml
<CustomField>
    <fullName>Project_Location__c</fullName>
    <formula>Project__r.Project_Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Location</label>
    <type>Text</type>
</CustomField>