force-app/main/default/objects/Opportunity__c/fields/Referrer_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Mobile__c</fullName>
    <label>Referrer_Mobile</label>
    <type>Phone</type>
</CustomField>