force-app/main/default/objects/Opportunity__c/fields/Referrer_Name__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referrer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity (Referrer Name)</relationshipLabel>
    <relationshipName>Opportunity1</relationshipName>
    <type>Lookup</type>
</CustomField>