force-app/main/default/objects/Opportunity__c/fields/Sales_Call_Comment_History__c.field-meta.xml
<CustomField>
    <fullName>Sales_Call_Comment_History__c</fullName>
    <label>Sales Call Comment History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>