force-app/main/default/objects/Opportunity__c/fields/Sales_Last_Call_Comment__c.field-meta.xml
<CustomField>
    <fullName>Sales_Last_Call_Comment__c</fullName>
    <label>Sales Last Call Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>